fix(wearable): set overflow hidden on ui-page(P150407-05351)
- issue has occurred because page is scrolled with toast popup
- set overflow:hidden style to ui-page.ui-scroll-on in circular env.

--- a/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
@@ -85,6 +85,7 @@ body {
 		height: 100%;
 		overflow: hidden;
 		overflow-y: auto;
+		.touch-scrolling();
 	}
 	.ui-content {
 		text-align: center;
@@ -123,6 +124,8 @@ body {
                    Page Scroll
 ***************************************************************************/
 .ui-page.ui-scroll-on {
+	overflow: hidden;
+
 	.ui-content {
 		margin-top: 122 * @unit_base;
 		margin-bottom: 114 * @unit_base;
